@@ -1,3 +1,8 @@
+2012-06-06 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* device/lib/_autobaud.c: cosmetics
+	* device/lib/printfl.c: fixed bug 3513300
+
 2012-06-06 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* src/hc08/gen.c: Fixed bug #3531544. Fixed cast from h to hx.
@@ -768,7 +773,7 @@
 	  Enable replacing division by power of two by conditional addition and shift (for hc08, z80, z180, gbz80 and r2k).
 	* src/z80/gen.c,
 	  src/mcs51/gen.c:
-	  Fortify a "/* I assume that [\85]" comment by an assertion that would have saved me some time.
+	  Fortify a "/* I assume that [...]" comment by an assertion that would have saved me some time.
 
 2012-04-20 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
@@ -7027,7 +7032,7 @@
 2010-09-18 Borut Razem <borut.razem AT siol.net>
 
 	* debugger/mcs51/cmd.c:
-	  fixed warning: suggest explicit braces to avoid ambiguous \91else\92
+	  fixed warning: suggest explicit braces to avoid ambiguous 'else'
 
 2010-09-18 Philipp Klaus Krause <pkk AT spth.de>
 
